--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ LazyData: true
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.2
+URL: https://github.com/ABbiodiversity/veghfsoil
+BugReports: https://github.com/ABbiodiversity/veghfsoil/issues
